update the Select Destination string

--- a/commons/src/main/res/values-pt-rPT/strings.xml
+++ b/commons/src/main/res/values-pt-rPT/strings.xml
@@ -10,7 +10,7 @@
     <string name="copy_move">Copiar/mover para</string>
     <string name="source">Origem</string>
     <string name="destination">Destino</string>
-    <string name="select_destination">Selecione o destino</string>
+    <string name="select_destination">Click here to select destination</string>
     <string name="invalid_destination">Não foi possível escrever no destino selecionado</string>
     <string name="please_select_destination">Por favor selecione um destino</string>
     <string name="source_and_destination_same">A origem e o destino não podem ser iguais</string>
