--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -10,7 +10,7 @@
     <string name="copy_move">Copia / Sposta</string>
     <string name="source">Fonte</string>
     <string name="destination">Destinazione</string>
-    <string name="select_destination">Seleziona destinazione</string>
+    <string name="select_destination">Click here to select destination</string>
     <string name="invalid_destination">Impossibile scrivere nella destinazione selezionata</string>
     <string name="please_select_destination">Seleziona una destinazione</string>
     <string name="source_and_destination_same">Sorgente e destinazione non possono essere uguali</string>
