--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -10,7 +10,7 @@
     <string name="copy_move">Копировать / Переместить</string>
     <string name="source">Путь источника</string>
     <string name="destination">Путь назначения</string>
-    <string name="select_destination">Выберите путь назначения</string>
+    <string name="select_destination">Click here to select destination</string>
     <string name="invalid_destination">Не удалось записать в выбранное расположение</string>
     <string name="please_select_destination">Пожалуйста, выберите путь назначения</string>
     <string name="source_and_destination_same">Исходный и конечный пути не могут совпадать</string>
