adding some filepicker strings

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -34,6 +34,23 @@
     <string name="append">Append with \'_1\'</string>
     <string name="apply_to_all">Bei allen Konflikten anwenden</string>
 
+    <!-- File picker -->
+    <string name="select_folder">Wähle einen Ordner aus</string>
+    <string name="select_file">Wähle eine Datei aus</string>
+    <string name="confirm_storage_access_title">Bitte bestätige Zugriff auf externen Speicher</string>
+    <string name="confirm_storage_access_text">Bitte wähle das Hauptverzeichnis deiner SD Karte auf dem nächsten Bildschirm um Schreibzugriff zu erlauben</string>
+
+    <plurals name="items">
+        <item quantity="one">1 Datei/Ordner</item>
+        <item quantity="other">%1$d Dateien/Ordner</item>
+    </plurals>
+
+    <!-- Storages -->
+    <string name="select_storage">Wähle den Speicher aus</string>
+    <string name="internal">Intern</string>
+    <string name="sd_card">SD Karte</string>
+    <string name="root">Hauptverzeichnis</string>
+
     <!-- Color customization -->
     <string name="background_color">Hintergrundfarbe</string>
     <string name="text_color">Schriftfarbe</string>
