--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -34,6 +34,23 @@
     <string name="append">Append with \'_1\'</string>
     <string name="apply_to_all">Apply to all conflicts</string>
 
+    <!-- File picker -->
+    <string name="select_folder">フォルダーを選択</string>
+    <string name="select_file">ファイルを選択</string>
+    <string name="confirm_storage_access_title">外部ストレージのアクセスを確認してください</string>
+    <string name="confirm_storage_access_text">次の画面で SD カードのルートフォルダーを選択して、書き込みアクセス許可を付与してください</string>
+
+    <plurals name="items">
+        <item quantity="one">1 アイテム</item>
+        <item quantity="other">%1$d アイテム</item>
+    </plurals>
+
+    <!-- Storages -->
+    <string name="select_storage">ストレージを選択</string>
+    <string name="internal">内部</string>
+    <string name="sd_card">SD カード</string>
+    <string name="root">ルート</string>
+
     <!-- Color customization -->
     <string name="background_color">Background color</string>
     <string name="text_color">Text color</string>
