--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -51,6 +51,17 @@
     <string name="sd_card">SD カード</string>
     <string name="root">ルート</string>
 
+    <!-- File properties -->
+    <string name="properties">プロパティ</string>
+    <string name="path">パス</string>
+    <string name="items_selected">アイテム選択</string>
+    <string name="direct_children_count">直接の子の数</string>
+    <string name="files_count">合計ファイル数</string>
+    <string name="resolution">解像度</string>
+    <string name="duration">期間</string>
+    <string name="artist">アーティスト</string>
+    <string name="album">アルバム</string>
+
     <!-- Color customization -->
     <string name="background_color">Background color</string>
     <string name="text_color">Text color</string>
@@ -73,7 +84,6 @@
     <string name="rename">名前の変更</string>
     <string name="share">共有</string>
     <string name="share_via">共有&#8230;</string>
-    <string name="properties">プロパティ</string>
     <string name="select_all">Select all</string>
 
     <!-- Sorting -->
