updating the Select destination string

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -10,7 +10,8 @@
     <string name="copy_move">Kopieren / Verschieben</string>
     <string name="source">Quelle</string>
     <string name="destination">Ziel</string>
-    <string name="select_destination">Click here to select destination</string>
+    <string name="select_destination">Ziel auswählen</string>
+    <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">Konnte nicht an ausgewähltes Ziel schreiben</string>
     <string name="please_select_destination">Bitte Ziel auswählen</string>
     <string name="source_and_destination_same">Quell- und Zielpfad sind identisch</string>
