--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -10,7 +10,8 @@
     <string name="copy_move">コピー / 移動</string>
     <string name="source">元</string>
     <string name="destination">先</string>
-    <string name="select_destination">Click here to select destination</string>
+    <string name="select_destination">宛先を選択</string>
+    <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">選択した宛先に書き込みできませんでした</string>
     <string name="please_select_destination">宛先を選択してください</string>
     <string name="source_and_destination_same">元と先を同じにすることはできません</string>
