--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -10,7 +10,8 @@
     <string name="copy_move">Copy / Move</string>
     <string name="source">Källa</string>
     <string name="destination">Mål</string>
-    <string name="select_destination">Click here to select destination</string>
+    <string name="select_destination">Välj mål</string>
+    <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">Det gick inte att skriva till målet</string>
     <string name="please_select_destination">Please select a destination</string>
     <string name="source_and_destination_same">Source and destination cannot be the same</string>
