--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -10,7 +10,8 @@
     <string name="copy_move">Copy / Move</string>
     <string name="source">Source</string>
     <string name="destination">Destination</string>
-    <string name="select_destination">Click here to select destination</string>
+    <string name="select_destination">Select destination</string>
+    <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">Could not write to the selected destination</string>
     <string name="please_select_destination">Please select a destination</string>
     <string name="source_and_destination_same">Source and destination cannot be the same</string>
