--- a/commons/src/main/res/values-zh/strings.xml
+++ b/commons/src/main/res/values-zh/strings.xml
@@ -10,7 +10,8 @@
     <string name="copy_move">复制 / 移动</string>
     <string name="source">原路径</string>
     <string name="destination">目标</string>
-    <string name="select_destination">Click here to select destination</string>
+    <string name="select_destination">选择目标</string>
+    <string name="click_select_destination">Click here to select destination</string>
     <string name="invalid_destination">不能写入选中目标</string>
     <string name="please_select_destination">请选择先目标</string>
     <string name="source_and_destination_same">原路径和目标不能相同</string>
