update the RTL library license

--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -127,7 +127,7 @@
     <string name="glide_title">Glide (Bilder laden und zwischenspeichern)</string>
     <string name="cropper_title">Android Image Cropper (Bilder zuschneiden und rotieren)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (Mehrfachauswahl in Listen)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (Um Bilder von rechts nach links zu wischen)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
     <string name="ambilwarna_title">AmbilWarna (Farbauswahltool)</string>
     <string name="joda_title">Joda-Time (Ersatz für Java Datum)</string>
     <string name="stetho_title">Stetho (Datenbanken debuggen)</string>
