--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -127,7 +127,7 @@
     <string name="glide_title">Glide (image loading and caching)</string>
     <string name="cropper_title">Android Image Cropper (image crop and rotate)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (selecting multiple list items)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (for swiping images right to left)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
     <string name="ambilwarna_title">AmbilWarna (color picker)</string>
     <string name="joda_title">Joda-Time (Java date replacement)</string>
     <string name="stetho_title">Stetho (debugging databases)</string>
