--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -127,7 +127,7 @@
     <string name="glide_title">Glide (caricamento e caching immagini)</string>
     <string name="cropper_title">Android Image Cropper (ritaglio e rotazione immagini)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (selezione elementi multipli da liste)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (scorrimento immagini da destra a sinistra)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
     <string name="ambilwarna_title">AmbilWarna (selettore colore)</string>
     <string name="joda_title">Joda-Time (sostituto di \"Java date\")</string>
     <string name="stetho_title">Stetho (debug database)</string>
