--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -127,7 +127,7 @@
     <string name="glide_title">Glide (загрузка изображения и кэширование)</string>
     <string name="cropper_title">Android Image Cropper (обрезка и поворот изображений)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (выбор нескольких элементов списка)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (для корректного отображения с RTL языками)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
     <string name="ambilwarna_title">AmbilWarna (диалог выбора цвета)</string>
     <string name="joda_title">Joda-Time (замена даты Java)</string>
     <string name="stetho_title">Stetho (базы данных отладки)</string>
