--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -123,7 +123,7 @@
     <string name="glide_title">Glide (image loading and caching)</string>
     <string name="cropper_title">Android Image Cropper (image crop and rotate)</string>
     <string name="multiselect_title">RecyclerView MultiSelect (selecting multiple list items)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (right to left image swiping)</string>
+    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
     <string name="ambilwarna_title">AmbilWarna (színválasztó)</string>
     <string name="joda_title">Joda-Time (Java dátum helyettesítérére)</string>
     <string name="stetho_title">Stetho (adatbázisok hibakeresésére)</string>
